# eagleMK4

./: .gitignore  Dockerfile  README.md  run-in-docker.sh
docs/: installation-guide.md
eaglemk4/: CMakeLists.txt  package.xml
eaglemk4/launch/: run.launch
misc/: 10-eaglemk4.rules  eaglemk4.service  ydlidar-1.3.9.patch
ros/: eaglemk4.rosinstall
ros/eaglemk4/: CMakeLists.txt  package.xml
ros/eaglemk4/config/: camera.yaml  cartographer.lua  high_level_mux.yaml  imu.yaml  joy.yaml  lidar.yaml  low_level_mux.yaml  vesc.yaml
ros/eaglemk4/config/nav/: costmap_common_params.yaml  ekf_localization.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
ros/eaglemk4/config/sensors/: camera.yaml  lidar.yaml
ros/eaglemk4/launch/: camera.launch  camera.xml  car.launch  controller_pf.launch  controller_pf.xml  imu.xml  joy.launch  joy.xml  lidar.launch  lidar.xml  localize-on-existing-map.launch  mux.xml  slam.launch  static_tf.launch  static_tf.xml  vesc.launch  vesc.xml  zr300.launch
ros/eaglemk4/launch/nav/: amcl.xml  ekf_localization.xml  explore_lite.xml  move_base.xml  nav.xml  slam.xml  slam_gmapping.xml
ros/eaglemk4/launch/sensors/: camera.xml  imu.xml  lidar.xml
ros/eaglemk4/rviz/: default.rviz
